# NeRF

./: .gitignore  DOCKER_BUILD_SUCCESS.md  Dockerfile.demo  Dockerfile.production  Dockerfile.production.complete  Dockerfile.simple  LICENSE  Makefile  NERF_DEMO_RESULTS.md  PRACTICAL_IMPLEMENTATION_GUIDE.md  PRODUCTION_SYSTEM_COMPLETE.md  PROJECT_COMPLETE.md  PROJECT_FINAL_SUMMARY.md  README.md  REAL_WORLD_PROJECT_PROPOSAL.md  build.bat  build.ps1  build_docker.ps1  build_docker_fixed.ps1  build_framework.sh  build_nerf_demo.bat  build_nerf_demo.sh  build_production_clean.ps1  build_production_system.ps1  complete_system_demo.ps1  dataset_collector.py  deploy_production.bat  deploy_production.sh  docker-compose.demo.yml  docker-compose.production.complete.yml  docker-compose.simple.yml  enhance_to_real_world.sh  enhanced_nerf_config.conf  integrate_real_world_system.sh  nerf_config.conf  nerf_demo.py  prepare.sh  prepare_stage2.sh  quick_start_real_project.sh  run_ffacenerf_system.py  (+2 more)
benchmarks/: assess_quality.py  run_performance_benchmark.ps1  run_performance_benchmark.sh
compiler_tests/: Makefile  compiler_tests.f90
datasets/: create_real_dataset.py
datasets/real_world/: dataset_manifest.ini  download_celeba.ps1  download_ffhq.ps1  generate_synthetic.ps1  process_faces.ps1
datasets/real_world/quality_control/: quality_config.ini  validate_quality.ps1
demo/: run_real_demo.sh
docs/: PROJECT_SUMMARY.md  README_WINDOWS.md  REAL_WORLD_IMPLEMENTATION.md
framework/: CMakeLists.demo.txt  CMakeLists.minimal.txt  CMakeLists.production.docker.txt  CMakeLists.production.txt  CMakeLists.simple.txt  CMakeLists.txt
framework/docker/: Dockerfile.coordinator  Dockerfile.worker  docker-compose.production.yml  docker-compose.yml
framework/proto/: daf.proto
framework/src/: demo_main.cpp
framework/src/common/: daf_types.h  daf_utils.cpp  daf_utils.h  plugin_loader.cpp  plugin_loader.h
framework/src/coordinator/: main.cpp  main_production.cpp  nerf_main.cpp  nerf_main_production.cpp  production_coordinator.cpp  production_coordinator.h
framework/src/storage/: metadata_store.cpp  metadata_store.h  redis_client_production.cpp  redis_client_production.h
framework/src/worker/: main.cpp
gui/: ffacenerf_gui.py
plugins/: CMakeLists.txt
plugins/nerf_avatar/: nerf_avatar_plugin.cpp  nerf_avatar_plugin.h
src/: main.f90  nerf_face_processor.f90  nerf_hadoop_interface.f90  nerf_mapreduce.f90  nerf_neural_network.f90  nerf_types.f90  nerf_utils.f90  nerf_volume_renderer.f90
